j2 template role config templates
This means the user won't have to manually specify e.g the
OS::TripleO::ACustomRoleConfig resource manually.

Partial-Bug: 1626976
Change-Id: I063571d4c5cbc2f295a7a044d81c27d703bd0e10
Depends-On: I9f920e191344040a564214f3f9a1147b265e9ff3
(cherry picked from commit 94fddffa6d3e98df227803cca0879855fe47e6d8)

--- a/puppet/config.role.j2.yaml
+++ b/puppet/config.role.j2.yaml
@@ -1,7 +1,7 @@
 heat_template_version: 2015-04-30
 
 description: >
-  A software config which runs applies puppet on the cephstorage role
+  A software config which runs puppet on the {{role}} role
 
 parameters:
   ConfigDebug:
@@ -15,7 +15,7 @@ parameters:
 
 resources:
 
-  CephStoragePuppetConfigImpl:
+  {{role}}PuppetConfigImpl:
     type: OS::Heat::SoftwareConfig
     properties:
       group: puppet
@@ -24,21 +24,21 @@ resources:
         enable_hiera: True
         enable_facter: False
         modulepath: /etc/puppet/modules:/opt/stack/puppet-modules:/usr/share/openstack-puppet/modules
+      outputs:
+      - name: result
       inputs:
       - name: step
         type: Number
-      outputs:
-      - name: result
       config:
         list_join:
         - ''
         - - str_replace:
               template: {get_file: manifests/overcloud_role.pp}
               params:
-                __ROLE__: cephstorage
+                __ROLE__: {{role.lower()}}
           - {get_param: StepConfig}
 
 outputs:
   OS::stack_id:
-    description: The software config which applies puppet on the cephstorage role
-    value: {get_resource: CephStoragePuppetConfigImpl}
+    description: The software config which runs puppet on the {{role}} role
+    value: {get_resource: {{role}}PuppetConfigImpl}
