--- a/environments/external-loadbalancer-vip.yaml
+++ b/environments/external-loadbalancer-vip.yaml
@@ -1,10 +1,4 @@
 resource_registry:
-  OS::TripleO::Network::Ports::NetVipMap: ../network/ports/net_vip_map_external.yaml
-  OS::TripleO::Network::Ports::ExternalVipPort: ../network/ports/noop.yaml
-  OS::TripleO::Network::Ports::InternalApiVipPort: ../network/ports/noop.yaml
-  OS::TripleO::Network::Ports::StorageVipPort: ../network/ports/noop.yaml
-  OS::TripleO::Network::Ports::StorageMgmtVipPort: ../network/ports/noop.yaml
-  OS::TripleO::Network::Ports::RedisVipPort: ../network/ports/from_service.yaml
   OS::TripleO::Controller::Ports::ExternalPort: ../network/ports/external_from_pool.yaml
   OS::TripleO::Controller::Ports::InternalApiPort: ../network/ports/internal_api_from_pool.yaml
   OS::TripleO::Controller::Ports::StoragePort: ../network/ports/storage_from_pool.yaml
@@ -18,13 +12,12 @@ parameter_defaults:
   # to control your VIPs (currently one per network)
   # NOTE: we will eventually move to one VIP per service
   #
-  ControlPlaneIP: 192.0.2.251
-  ExternalNetworkVip: 10.0.0.251
-  InternalApiNetworkVip: 172.16.2.251
-  StorageNetworkVip: 172.16.1.251
-  StorageMgmtNetworkVip: 172.16.3.251
-  ServiceVips:
-    redis: 172.16.2.252
+  ControlFixedIPs: [{'ip_address':'192.0.2.251'}]
+  PublicVirtualFixedIPs: [{'ip_address':'10.0.0.251'}]
+  InternalApiVirtualFixedIPs: [{'ip_address':'172.16.2.251'}]
+  StorageVirtualFixedIPs: [{'ip_address':'172.16.1.251'}]
+  StorageMgmtVirtualFixedIPs: [{'ip_address':'172.16.3.251'}]
+  RedisVirtualFixedIPs: [{'ip_address':'172.16.2.252'}]
   ControllerIPs:
     external:
     - 10.0.0.253
