--- a/puppet/services/pacemaker/cinder-volume.yaml
+++ b/puppet/services/pacemaker/cinder-volume.yaml
@@ -41,5 +41,6 @@ outputs:
           - get_attr: [CinderVolumeBase, role_data, config_settings]
           - cinder::volume::manage_service: false
             cinder::volume::enabled: false
+            cinder::host: hostgroup
       step_config:
         include ::tripleo::profile::pacemaker::cinder::volume
