--- a/environments/logging-environment.yaml
+++ b/environments/logging-environment.yaml
@@ -4,7 +4,7 @@
 resource_registry:
   OS::TripleO::Services::FluentdClient: ../puppet/services/logging/fluentd-client.yaml
 
-parameter_defaults:
+#parameter_defaults:
 
 ## Simple configuration
 #
