--- a/environments/monitoring-environment.yaml
+++ b/environments/monitoring-environment.yaml
@@ -4,7 +4,7 @@
 resource_registry:
   OS::TripleO::Services::SensuClient: ../puppet/services/monitoring/sensu-client.yaml
 
-parameter_defaults:
+#parameter_defaults:
   #### Sensu settings ####
   ##MonitoringRabbitHost: 10.10.10.10
   ##MonitoringRabbitPort: 5672
