--- a/puppet/services/aodh-base.yaml
+++ b/puppet/services/aodh-base.yaml
@@ -59,6 +59,7 @@ outputs:
     value:
       service_name: aodh_base
       config_settings:
+        aodh_redis_password: {get_param: RedisPassword}
         aodh::evaluator::coordination_url:
           list_join:
             - ''
