--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -56,6 +56,7 @@ outputs:
       service_name: gnocchi_base
       config_settings:
         #Gnocchi engine
+        gnocchi_redis_password: {get_param: RedisPassword}
         gnocchi::debug: {get_param: Debug}
         gnocchi::db::database_connection:
           list_join:
