telemetry: remove coordination_url hiera settings
They are now normalized and set in puppet-tripleo.

Change-Id: I197481c577b85894178e7899a55869da47847755
Closes-Bug: #1629279
Depends-On: Ic6de09acf0d36ca90cc2041c0add1bc2b4a369a5
(cherry picked from commit d720f22925d20f430fc64c8a809efc4bfc2b4038)

--- a/puppet/services/ceilometer-agent-central.yaml
+++ b/puppet/services/ceilometer-agent-central.yaml
@@ -51,14 +51,6 @@ outputs:
       config_settings:
         map_merge:
           - get_attr: [CeilometerServiceBase, role_data, config_settings]
-          - ceilometer::agent::central::coordination_url:
-              list_join:
-                - ''
-                - - 'redis://:'
-                  - {get_param: RedisPassword}
-                  - '@'
-                  - "%{hiera('redis_vip')}"
-                  - ':6379/'
-            ceilometer_redis_password: {get_param: RedisPassword}
+          - ceilometer_redis_password: {get_param: RedisPassword}
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::central
