Fixes missing provider mappings for OpenDaylight
Provider mappings were not parameterized, and this is traditionally
required for VLAN provider networks.  In ODL Boron with new netvirt,
this value is required to be set in order to use external networks.

Closes-Bug: #1627898

Change-Id: I8001a4077fc7c4af458033043ea438c32c9772b0
Signed-off-by: Tim Rozet <trozet@redhat.com>
(cherry picked from commit 32d7c52bf8a7abb851994c36a846f1770ad5068a)

--- a/puppet/services/opendaylight-ovs.yaml
+++ b/puppet/services/opendaylight-ovs.yaml
@@ -19,6 +19,11 @@ parameters:
   OpenDaylightApiVirtualIP:
     type: string
     default: ''
+  OpenDaylightProviderMappings:
+    description: Mappings between logical networks and physical interfaces.
+                 Required for VLAN deployments.  For example physnet1 -> eth1.
+    type: comma_delimited_list
+    default: "datacentre:br-ex"
   EndpointMap:
     default: {}
     description: Mapping of service endpoint -> protocol. Typically set
@@ -43,5 +48,10 @@ outputs:
         opendaylight::odl_rest_port: {get_param: OpenDaylightPort}
         opendaylight_check_url: {get_param: OpenDaylightCheckURL}
         opendaylight::nb_connection_protocol: {get_param: OpenDaylightConnectionProtocol}
+        neutron::plugins::ovs::opendaylight::provider_mappings:
+          str_replace:
+            template: MAPPINGS
+            params:
+              MAPPINGS: {get_param: OpenDaylightProviderMappings}
       step_config: |
         include tripleo::profile::base::neutron::plugins::ovs::opendaylight
