Renames OpenDaylight to OpenDaylightApi and splits out OVS configuration
This patch modifies the service name to be more appropriately called
"OpenDaylightApi" along side the "OpenDaylightOvs" service used to
configure OpenVSwitch.  It also splits out the OVS configuration for
controller nodes into the composable OpenDaylightOvs service.

Related-Bug: #1629408

Change-Id: I15221401acdfb2a9ef81107b54a8005348f8372f
Signed-off-by: Tim Rozet <trozet@redhat.com>
(cherry picked from commit 78500bc2e606bd1f80e05d86bf7da4d1d27f77b1)

--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -90,7 +90,8 @@
     - OS::TripleO::Services::NovaIronic
     - OS::TripleO::Services::TripleoPackages
     - OS::TripleO::Services::TripleoFirewall
-    - OS::TripleO::Services::OpenDaylight
+    - OS::TripleO::Services::OpenDaylightApi
+    - OS::TripleO::Services::OpenDaylightOvs
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
     - OS::TripleO::Services::VipHosts
