Specify the Ceph packages to be installed
The puppet-ceph module defaults to 'ceph' but that is a metapacakge
which isn't provided in all repos.

Depends-On: I13462219522386f8740b0d70916a44f3474115e4
Change-Id: Ie55d22301dd22102d471e6002dfcaad4bfadd5f6
Related-Bug: 1629933

--- a/puppet/services/ceph-base.yaml
+++ b/puppet/services/ceph-base.yaml
@@ -75,6 +75,12 @@ outputs:
         ceph::profile::params::manage_repo: false
         ceph::profile::params::authentication_type: cephx
         ceph::profile::params::fsid: {get_param: CephClusterFSID}
+        # FIXME(gfidente): we should not have to list the packages explicitly in the templates,
+        # but this has to stay until https://bugs.launchpad.net/puppet-ceph/+bug/1629933 is fixed
+        ceph::params::packages:
+          - ceph-base
+          - ceph-mon
+          - ceph-osd
         # NOTE: bind IP is found in Heat replacing the network name with the local node IP
         # for the given network; replacement examples (eg. for internal_api):
         # internal_api -> IP
