Fix OpendaylightApiNetwork key naming
This captialization won't work with the CamelCase to snake_case
conversion we do, as the required name is opendaylight_api_network

Adds some clarification to the ServiceNetMap description to hopefully
avoid future confusion.

Change-Id: Ife04ee2185e81009ebef55ad521aef799251e002
Closes-Bug: #1629408
(cherry picked from commit eaa385f3b0460497d04845a71ad0a16be4c435fe)

--- a/network/service_net_map.j2.yaml
+++ b/network/service_net_map.j2.yaml
@@ -8,9 +8,17 @@ parameters:
     description: Mapping of service_name -> network name. Typically set
                  via parameter_defaults in the resource registry.  This
                  mapping overrides those in ServiceNetMapDefaults.
+                 Note that the key in this map must match the service_name
+                 in the service template, e.g if the service_name is heat_api
+                 the key must be either heat_api_network, or optionally
+                 HeatApiNetwork (which will be internally converted to
+                 transform captalization to underscores).
     default: {}
     type: json
 
+  # Note that the key in this map must match the service_name
+  # see the description above about conversion from CamelCase to
+  # snake_case - the names must still match when converted
   ServiceNetMapDefaults:
     default:
       ApacheNetwork: internal_api
@@ -47,7 +55,7 @@ parameters:
       CephMonNetwork: storage
       CephRgwNetwork: storage
       PublicNetwork: external
-      OpenDaylightApiNetwork: internal_api
+      OpendaylightApiNetwork: internal_api
       # We special-case the default ResolveNetwork for the CephStorage role
       # for backwards compatibility, all other roles default to internal_api
       CephStorageHostnameResolveNetwork: storage
