Set proper ceph config path for manila
When deploying manila with cephfs backend,
/etc/manila/manila.conf should define

  cephfs_conf_path = /etc/ceph/ceph.conf

in the cephfs native backend since this is
the conventional path that ceph operators expect
and since we document that path upstream.

Change-Id: I4abf5c33b675b1102413a84d64f4ce23b07b4485
Closes-Bug: 1630777

--- a/environments/manila-cephfsnative-config.yaml
+++ b/environments/manila-cephfsnative-config.yaml
@@ -12,7 +12,7 @@ parameter_defaults:
   ManilaCephFSNativeEnableBackend: true
   ManilaCephFSNativeBackendName: cephfsnative
   ManilaCephFSNativeDriverHandlesShareServers: false
-  ManilaCephFSNativeCephFSConfPath: '/etc/ceph/cephfs.conf'
+  ManilaCephFSNativeCephFSConfPath: '/etc/ceph/ceph.conf'
   ManilaCephFSNativeCephFSAuthId: 'manila'
   ManilaCephFSNativeCephFSClusterName: 'ceph'
   ManilaCephFSNativeCephFSEnableSnapshots: true
