--- a/puppet/services/manila-backend-cephfs.yaml
+++ b/puppet/services/manila-backend-cephfs.yaml
@@ -33,7 +33,7 @@ parameters:
     default: 'cephfs'
   ManilaCephFSNativeCephFSConfPath:
     type: string
-    default: '/etc/ceph/cephfs.conf'
+    default: '/etc/ceph/ceph.conf'
   ManilaCephFSNativeCephFSAuthId:
     type: string
     default: 'manila'
