Enable firewalling by default on compute nodes
- Move VXLAN and VRRP rules from Neutron Server to the right services.
- Enable Firewall by default on Compute nodes.

Change-Id: I99d172dcedaf6be297aad184cc51fe9f292a57e1

--- a/puppet/services/keepalived.yaml
+++ b/puppet/services/keepalived.yaml
@@ -41,5 +41,8 @@ outputs:
       config_settings:
         tripleo::keepalived::control_virtual_interface: {get_param: ControlVirtualInterface}
         tripleo::keepalived::public_virtual_interface: {get_param: PublicVirtualInterface}
+        tripleo.keepalived.firewall_rules:
+          '106 keepalived vrrp':
+            proto: vrrp
       step_config: |
         include ::tripleo::profile::base::keepalived
