Prefill Sensu client custom config
- Custom config has to contain OpenStack auth information,
  so it has to be generated for user during deployment.
  This patch maintains the ability to provide a custom
  configuration for the Sensu client.

Change-Id: If449642c4bbad683421e1f461b8721e655db0c45
(cherry picked from commit 9d9eecea56b15f6f96f9d33def8045afb6527051)

--- a/puppet/services/monitoring/sensu-client.yaml
+++ b/puppet/services/monitoring/sensu-client.yaml
@@ -18,6 +18,13 @@ parameters:
       Mapping of service endpoint -> protocol. Typically set
       via parameter_defaults in the resource registry.
     type: json
+  AdminPassword:
+    description: Keystone admin user password
+    type: string
+  KeystoneRegion:
+    default: 'regionOne'
+    description: Keystone region for endpoint
+    type: string
   SensuClientCustomConfig:
     default: {}
     description: Hash containing custom sensu-client variables.
@@ -44,6 +51,14 @@ outputs:
           - sensu::api: false
             sensu::client: true
             sensu::server: false
-            sensu::client_custom: {get_param: SensuClientCustomConfig}
+            sensu::client_custom:
+              map_merge:
+                - {get_param: SensuClientCustomConfig}
+                - openstack:
+                    username: 'admin'
+                    password: {get_param: AdminPassword}
+                    auth_url: {get_param: [EndpointMap, KeystoneInternal, uri]}
+                    tenant_name: 'admin'
+                    region: {get_param: KeystoneRegion}
       step_config: |
         include ::tripleo::profile::base::monitoring::sensu
