Fix default Swift ring partition power
Looks like swift::ringbuilder::part_power is not used at all; actually
the partition power on the overcloud is 18, which is the default in
puppet-swift if nothing else is defined.

Closes-Bug: 1631926
Depends-On: I78049105adf52226d47cc6764b1ba6c2c06e91e5
Change-Id: I65335c8d31ed1130e71f1e193eb519b9f7f2438e

--- a/puppet/services/swift-ringbuilder.yaml
+++ b/puppet/services/swift-ringbuilder.yaml
@@ -48,6 +48,8 @@ outputs:
       config_settings:
         tripleo::profile::base::swift::ringbuilder::build_ring: {get_param: SwiftRingBuild}
         tripleo::profile::base::swift::ringbuilder::replicas: {get_param: SwiftReplicas}
+        tripleo::profile::base::swift::ringbuilder::part_power: {get_param: SwiftPartPower}
+        tripleo::profile::base::swift::ringbuilder::min_part_hours: {get_param: SwiftMinPartHours}
         tripleo::profile::base::swift::ringbuilder::raw_disk_prefix: 'r1z1-'
         tripleo::profile::base::swift::ringbuilder::raw_disks:
           yaql:
@@ -59,7 +61,5 @@ outputs:
                   template: ':%PORT%/DEVICE'
                   for_each:
                     DEVICE: {get_param: SwiftRawDisks}
-        swift::ringbuilder::part_power: {get_param: SwiftPartPower}
-        swift::ringbuilder::min_part_hours: {get_param: SwiftMinPartHours}
       step_config: |
         include ::tripleo::profile::base::swift::ringbuilder
