--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -75,6 +75,7 @@ outputs:
               - admin
               - swiftoperator
               - ResellerAdmin
+            swift::proxy::versioned_writes::allow_versioned_writes: true
             swift::proxy::pipeline:
               - 'catch_errors'
               - 'healthcheck'
@@ -87,6 +88,7 @@ outputs:
               - 'authtoken'
               - 'keystone'
               - 'staticweb'
+              - 'versioned_writes'
               - 'proxy-logging'
               - 'proxy-server'
             swift::proxy::account_autocreate: true
